# async-logger

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: compare_memory_ordering.cpp  logger_benchmark.cpp  memory_ordering_comparison.cpp  ring_buffer_benchmark.cpp  ring_buffer_benchmark_realistic.cpp  ring_buffer_latency.cpp
include/: logger.hpp  ring_buffer.hpp
src/: logger.cpp
tests/: logger_test.cpp  ring_buffer_mt_test.cpp  ring_buffer_test.cpp
